# Code47

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  Code47.cpp  Code47.h  Gender.h  IMoveable.h  IShotable.h  Position.cpp  Position.h  ReturnValue.h  Soldier.cpp  Soldier.h
GameDemo/: CMakeLists.txt
GameDemo/WestWorld/: CMakeLists.txt
GameDemo/WestWorld/include/: BaseGameEntity.h  LocationType.h  Miner.h  MinerDigGoldState.h  MinerGlobalState.h  MinerRestAtHomeState.h  MinerSaveGoldToBankState.h  State.h  StateMachine.h
GameDemo/WestWorld/src/: BaseGameEntity.cpp  Miner.cpp  MinerDigGoldState.cpp  MinerGlobalState.cpp  MinerRestAtHomeState.cpp  MinerSaveGoldToBankState.cpp  WestWorld.cpp
Math/: Line.cpp  Line.h  Point.cpp  Point.h
